fixed highlighting issue on CSS menu

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -27,8 +27,6 @@
 </div>
 
 
-
-
 <div id="control_container">
 <div id="button_container">
 <button id="shuffle_button" class="control_button" type="button">shuffle</button>
@@ -74,7 +72,7 @@ var storedClassroom = localStorage.getItem('classroom');
 classroom.fromJSON(storedClassroom);
 console.log(classroom.toString());
 console.log('stored students per group')
-console.log(localStorage.getItem('students_per_group'))
+console.log(localStorage.getItem('students_per_group'));
 var studentsPerGroup = parseInt(localStorage.getItem('students_per_group'));
 
 // create random pairs of students
@@ -92,12 +90,11 @@ var layout = new ClusterLayout('svg');
 for (var i = 0; i < assignments.length; i++) {
   layout.addCluster(assignments[i].getStudentIDs());
 }
+
 console.log('assignments')
 console.log(assignments)
-
 console.log('students')
 console.log(students)
-
 console.log('studentsPerGroup')
 console.log(studentsPerGroup)
 
