--- a/src/table-view.html
+++ b/src/table-view.html
@@ -51,7 +51,7 @@
 
 <th id="button_row" colspan="4">
 <div id="control_container">
-<div id="groupem_container">
+<div id="button_container">
 <button id="groupem_button" class="control_button" disabled>group'em</button>
 </div>
 <div id="group_size_container">
