changed logo to FontAwesome so that we can resize easily

--- a/src/group-view.html
+++ b/src/group-view.html
@@ -16,7 +16,10 @@
 
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 30px 0; height:150px; " >
-<img src="../images/logo_1.png" width=180>
+<div id = "logo_container">
+<div id = "logo_icon"></div>
+<div id = 'logo_name'></div>
+</div>
 </div>
 <div id='cssmenu'>
 <ul>
