--- a/src/table-view.html
+++ b/src/table-view.html
@@ -14,7 +14,11 @@
 <body>
 <div class="sidebar">
 <div style="position: relative; text-align: center; margin: 30px 0; height:150px; ">
-<img src="../images/logo_1.png" width=180 >
+<div id = "logo_container">
+<div id = "logo_icon"></div>
+<div id = 'logo_name'></div>
+</div>
+<!-- <img src="../images/logo_1.png" width=180 > -->
 
 </div>
 <div id='cssmenu'>
