--- a/src/table-view.html
+++ b/src/table-view.html
@@ -11,20 +11,17 @@
 <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 <link rel='stylesheet' href="../src/table-view.css">
 
-<body>
 <div class="sidebar">
-<div style="position: relative; text-align: center; margin: 30px 0; height:150px; ">
+<div style="position: relative; text-align: center; margin: 30px 0; height:150px; " >
 <div id = "logo_container">
 <div id = "logo_icon"></div>
 <div id = 'logo_name'></div>
 </div>
-<!-- <img src="../images/logo_1.png" width=180 > -->
-
 </div>
 <div id='cssmenu'>
 <ul>
-   <li class='active'><a href='#'><span>Creation</span></a></li>
-   <li class='last'><a href='group-view.html'><span>Groups</span></a></li>
+   <li class='active' ><a id='link_to_table_view' href='#'></a></li>
+   <li class='last'><a id='link_to_group_view' href='group-view.html'></a></li>
 </ul>
 </div>
 </div>
