--- a/src/group-view.html
+++ b/src/group-view.html
@@ -23,8 +23,8 @@
 </div>
 <div id='cssmenu'>
 <ul>
-   <li class='active' ><a id='link_to_table_view' href='table-view.html'></a></li>
-   <li class='last'><a id='link_to_group_view' href='#'></a></li>
+   <li class='last' ><a id='link_to_table_view' href='table-view.html'></a></li>
+   <li class='active'><a id='link_to_group_view' href='#'></a></li>
 </ul>
 </div>
 </div>
