ADD_INITIAL_LIST = false.

--- a/src/table-view.html
+++ b/src/table-view.html
@@ -74,7 +74,7 @@
 <script src="../src/student.js"></script>
 
 <script>
-var ADD_INITIAL_LIST = true;
+var ADD_INITIAL_LIST = false;
 var ADD_CLASSNAME_PLACEHOLDER = "enter class name"
 var ADD_STUDENT_BOX_PLACEHOLDER = "enter student or copy/paste student list"
 var REVERT_SPEED_DURATION = 500;
